Header z-index fix

--- a/components/layout/header/header.module.css
+++ b/components/layout/header/header.module.css
@@ -8,6 +8,7 @@
   align-items: center;
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 
 .profilePic {
